tests/paczka1/fuzzy1/13768142.err
Error in line 7: DPim9R7xb S961 22,0
Error in line 21: DPim9R7xbkS502k44,4
Error in line 24: DPim9R7xb S335 57,6
Error in line 26: DPim9R7xb S502 11,5
Error in line 25: WPzhzqm9o S335 87,2
Error in line 29: DPim9R7xb S961 83,6
